syntax = "proto3";

package db;

service DB {
    rpc CreateUser(CreateUserRequest) returns (CreateUserReply) {}
    rpc GetUser(GetUserRequest) returns (GetUserReply) {}
}


message CreateUserRequest {
    string name = 1;
}

message CreateUserReply {
}

message GetUserRequest {
    string name = 1;
}

message GetUserReply {
}

